--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Michael M.Ringa-Portfolio</title>
+    <title>about Simon Kadenge</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -48,14 +48,14 @@
     <section id="home" class="home">
       <div class="Home-img">
         <div class="profile">
-          <img src="img/profile.jpg" alt="profile-Picture" />
+          <img src="img/Simon 1.jpg" alt="profile-Picture" />
         </div>
         <div class="home-content">
           <h1>
-            Hello, <br />
-            <span>I'm Michael</span>
+            Hi, <br />
+            <span>I'm Simon</span>
           </h1>
-          <p>Freelancer Web Designer & Developer</p>
+          <p> Web Designer & Developer</p>
           <a href=""><button>Hire Me</button></a>
         </div>
       </div>
@@ -106,7 +106,7 @@
 
     <div class="col-3">
         <h3>CONTACT</h3>
-        <p>123, xyz Road BSK 3<br>Malindi, Kenya</p>
+        <p>405, xyz Road BSK 3<br>Malindi, Kenya</p>
         
     <div class="social-icons">
         <a href=""><i class="fa-brands fa-facebook"></i></a>
@@ -118,7 +118,7 @@
     </div>
 </div>
 <footer class="Copyright">
-  <p>Copyright &copy; 2023 Michael M. Ringa | All Rights Reserved</p>
+  <p>Copyright &copy; 2023 Simon Kadenge | All Rights Reserved</p>
 </footer>
 
 <!-- JAVASCRIPT -->
