--- a/skills.html
+++ b/skills.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Michael M.Ringa-Portfolio</title>
+    <title>About Simon</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -48,14 +48,14 @@
     <section id="home" class="home">
       <div class="Home-img">
         <div class="profile">
-          <img src="img/profile.jpg" alt="profile-Picture" />
+          <img src="img/Simon 1.jpg" alt="profile-Picture" />
         </div>
         <div class="home-content">
           <h1>
-            Hello, <br />
-            <span>I'm Michael</span>
+            Hi, <br />
+            <span>I'm Simon</span>
           </h1>
-          <p>Freelancer Web Designer & Developer</p>
+          <p>Web Designer & Developer</p>
           <a href="contact.html"><button>Hire Me</button></a>
         </div>
       </div>
@@ -91,15 +91,7 @@
           post-processing.
         </p>
       </div>
-      <div class="skill-card">
-        <img src="img/freelance-work.png" alt="" />
-        <h2>Freelancing</h2>
-        <!-- Description will go here -->
-        <p>
-          Experienced freelancer with strong communication skills, delivering
-          quality results on time.
-        </p>
-      </div>
+     
       <!-- Add more skill cards as needed -->
     </section>
     <!-- END -->
@@ -136,7 +128,7 @@
     </div>
 </div>
 <footer class="Copyright">
-  <p>Copyright &copy; 2023 | Michael M. Ringa | All Rights Reserved</p>
+  <p>Copyright &copy; 2023 | simon Kadenge | All Rights Reserved</p>
 </footer>
 <!-- JAVASCRIPT -->
  <script src="script.js"></script>
